aligntment fix

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 }
 
 .card {
+    width: 100%;
     border: none;
     border-radius: 0.375rem;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -16,6 +17,13 @@ body {
 .card-body {
     background-color: whitesmoke;
     border-radius: 4px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #addBtn {
